# kickputt

./: Cargo.toml  shell.nix
src/: bin.rs  lib.rs
